--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
+      "js": ["src/contentScript.js", "src/popup/popup.js"],
       "css": ["styles.css"]
     }
   ],
@@ -21,5 +22,5 @@
     "default_icon": "assets/icon.png",
     "default_popup": "src/popup/popup.html"
   },
-  "permissions": ["storage", "contextMenus", "notifications"]
+  "permissions": ["activeTab", "storage", "contextMenus"]
 }
