--- a/manifest.json
+++ b/manifest.json
@@ -11,16 +11,16 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["src/contentScript.js", "src/popup/popup.js"],
+      "js": ["content-script.js", "popup/popup.js"],
       "css": ["styles.css"]
     }
   ],
   "background": {
-    "service_worker": "src/contextMenu.js"
+    "service_worker": "service-worker.js"
   },
   "action": {
     "default_icon": "assets/icon.png",
-    "default_popup": "src/popup/popup.html"
+    "default_popup": "popup/popup.html"
   },
   "permissions": ["activeTab", "storage", "contextMenus"]
 }
