--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "48": "assets/icon.png",
     "128": "assets/icon.png"
   },
-  "permissions": ["activeTab", "storage", "contextMenus"],
+  "permissions": ["activeTab", "contextMenus"],
   "action": {
     "default_icon": "assets/icon.png",
     "default_popup": "popup/popup.html"
